--- a/aboutme/Image/Styles/index.html
+++ b/aboutme/Image/Styles/index.html
@@ -14,7 +14,7 @@
     <p> Hello Everyone, My name is Mary Nathaniel, I am from Nigeria, I reside in Abuja, FCt.
         I attend the Chuurch of Jesus Christ of Latterday Saint with my family and it has been 
         a wonderful experience so far. I love hyking and learning new things at the same time.  </p>
-    </p>By profession, I am a technical support engineer and I desire to advance  in my profession
+    </p>By profession, xI am a technical support engineer and I desire to advance  in my profession
        by taking this course and and continously seek learning, just like how the Prophet admonsished. 
        I am super delighted to be part of this wonderful journey which has given me great privledge of learning
        and be more proefiecient in my career path.I plan to utilize this course by practicing and 
