--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,11 +20,11 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>Prepare my website with the proper foundational information and guides that shares personal educative interest in lign with educational background and knowledge.</p>
+    <p>Prepare my website with the proper foundational information and guides that shares personal about whitewater raftting, our prestigious adventure fun recreation in Colorado.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>audience are student, teenagers, freshers, youth and Instructor. They need knowledge of university coursework, curriculum alignment and constant reminders university structures, their need that arent met are the inability to ponder on the curriculum to be one step ahead in studies and inability to get adapted to school structure expecially for university freshers and school mates. This site would be accessed through mobile devices and laptops with all hitch free and easy access to information that will be helpfull througout their academic journey. This site will be  consise and will meet with all school standards.</p>
+    <p>audience are adults, youth and children from age 8 upward. They need need to engage in this sort of therapeutic either single or in families as it help clears their mind and benefits them medically.  Our targeted audiences will experience rivers of all kind depending or ranging on their need, capacity and exclusively for physically fit and experienced rafters. Their adventure promises to be fun filed, recreational and also health inclusive satisfaction dereived as a result.  </p>
     <!-- change this -->
 
     <hr />
