--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,7 +20,7 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>Prepare my website with the proper foundational information and guides that shares personal about whitewater raftting, our prestigious adventure fun recreation in Colorado.</p>
+    <p>Prepare my website with the proper foundational information and guides that shares personal about whitewater raftting, our prestigious adventure fun recreation in Colorado and Roaring Fork Rivers in Glenwood Spings.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
